@@ -23,7 +23,7 @@ LIBXINE_REQUIRED=1.0.0
 GSTREAMER_REQUIRED=0.8.0
 GTK_REQUIRED=2.6
 ICON_THEME_REQUIRED=2.10
-MONO_REQUIRED=1.0
+MONO_REQUIRED=1.1
 GTKSHARP_REQUIRED=1.9.2
 DBUSSHARP_REQUIRED=0.21
 MONODOC_REQUIRED=1.1.9
