@@ -22,7 +22,7 @@ using System;
 using System.IO;
 using System.Collections;
 
-using Mono.Posix;
+using Mono.Unix;
 
 using Gtk;
 
