@@ -22,7 +22,7 @@ using System;
 using Gtk;
 using GLib;
 
-using Mono.Posix;
+using Mono.Unix;
 
 namespace Muine
 {
