@@ -26,7 +26,7 @@ using Gdk;
 
 using DBus;
 
-using Mono.Posix;
+using Mono.Unix;
 
 namespace Muine
 {
